# Agent-Operating-Platform

./: .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  config.toml  config.toml.example  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: AgentOperatingPlatform差异化定位说明.md  Agent平台总体战略规划.md  LLM-Wiki独立模块化改造技术方案.md  README.md  TODO-agent-bundle-mainflow.md  业务包bundle剩余事项与解决方案.md  业务包bundle化-交接文档.md  可扩展Agent平台-通用PRD-v1.0.md  可扩展Agent架构-技术开发文档.md  可扩展Agent架构-通用能力模块化方案.md  技术文档知识库-混合检索优化方案.md  界面修改开发方案.md  知识库行业插件化索引与混合检索-功能技术方案.md
docs/01-architecture/: 可扩展Agent架构-技术开发文档.md  多入口AI业务操作平台与外部数据分析方案.md
docs/02-bundles/: 业务包相关界面修改方案.md
docs/03-knowledge-rag/: LLM-Wiki文件分布状态可视化方案.md  对话演示与RAG结合-修复方案.md  知识库治理前端交互逻辑方案.md
docs/05-plans/: 可扩展Agent平台-前后端开发任务清单与里程碑排期.md  多入口AI业务操作平台实施计划.md
docs/业务包相关开发方案/: 制造业设备运维助手-业务包开发文档.md  插件开发指南.md  行业业务包-通用开发方案.md
example/bundles/: BUNDLE_RULES.md
example/industry.mfg_maintenance/: README.md  conversations.md  industry.mfg_maintenance.json  manifest.json
migrations/: env.py
migrations/versions/: 20260419_0001_baseline.py  20260422_0002_add_knowledge_chunks.py  20260423_0003_add_knowledge_wiki_tables.py  20260424_0004_add_knowledge_base.py  20260424_0005_remove_seed_knowledge_demo_data.py  20260425_0006_add_knowledge_base_id_primary_key.py  20260425_0007_reset_tenant_and_user_primary_keys.py  20260428_0019_add_ai_run_table.py  (+11 more)
scripts/: run-api.ps1  run-api.sh  run_api.py
(+155 files in other folders)
