[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-operating-platform"
version = "0.1.0"
description = "P0a MVP for Agent Operating Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "greenlet>=3.0.0",
  "uvicorn>=0.30.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0"
]

[dependency-groups]
dev = [
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "pytest>=8.2.0"
]

[tool.setuptools]
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]

[tool.pytest.ini_options]
testpaths = [
  "apps/api/tests"
]
